<resources>
    <string name="app_name">D&amp;D Character Sheet</string>
    <string name="title_profile">Profile</string>
    <string name="title_stats">Stats</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_spells">Spells</string>
    <string name="title_weapons">Weapons</string>
    <string name="title_subclass">Subclass</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="undo">Undo</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="plus">+</string>
    <string name="plus_value">+ %d</string>
    <string name="hint_search">Search…</string>
    <string name="button_search">Search button</string>
    <string name="empty">-</string>
    <string name="comma">,</string>
    <string name="parenthesis">(%d)</string>
    <string name="check_all">Check all</string>
    <string name="uncheck_all">Uncheck all</string>
    <string name="label_email">Email :</string>
    <string name="label_password">Password :</string>
    <string name="label_password_confirm">Confirm Password :</string>
    <string name="signup">Sign up</string>
    <string name="signup_text">You don\'t have an account yet ? Sign up right now !</string>
    <string name="signing_up">Creating account</string>
    <string name="signing_up_text">Please wait while we create your account.</string>
    <string name="signup_failed">An error occurred while creating your account.</string>
    <string name="signup_success">Your account has been created.</string>
    <string name="login">Login</string>
    <string name="login_text">You already have an account ? Login right now !</string>
    <string name="login_failed">An error occurred while logging you in.</string>
    <string name="login_success">You are now logged in.</string>
    <string name="logging_in">Logging in</string>
    <string name="logging_in_text">Please wait while we log you in.</string>
    <string name="warning_email_empty">You need to enter an email address.</string>
    <string name="warning_password_empty">You need to enter a password.</string>
    <string name="warning_password_invalid">You need to enter a password with at least 6 characters.</string>
    <string name="warning_password_mismatch">Passwords don\'t match.</string>
    <string name="loading">Loading…</string>
    <string name="searching_for_character">Fetching character…</string>
    <string name="fetching_classes">Fetching classes…</string>
    <string name="fetching_spells">Fetching spells…</string>
    <string name="fetching_damage_types">Fetching damage types…</string>
    <string name="fetching_weapon_properties">Fetching weapon properties…</string>
    <string name="fetching_weapons">Fetching weapons…</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_delete_character">Delete %s ?</string>
    <string name="text_delete_character">Are you sure you want to delete %s ?</string>
    <string name="language">Language</string>
    <string name="fr">French</string>
    <string name="en">English</string>
    <string name="unit_system">Unit System</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="account">Account</string>
    <string name="change_email">Change email address</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_text">Are you sure you want to delete your account ?</string>
    <string name="delete_account_success">Your account has been deleted.</string>
    <string name="delete_account_failed">An error occurred while deleting your account.</string>
    <string name="save_to_remote">Save to Remote</string>
    <string name="switch_character">Switch character</string>
    <string name="profile_name">Name</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_race">Race</string>
    <string name="profile_age">Age</string>
    <string name="profile_class">Class</string>
    <string name="profile_height">Height</string>
    <string name="profile_height_unit">m</string>
    <string name="profile_level">Level</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_weight_unit">kg</string>
    <string name="profile_personality_traits">Personality Traits</string>
    <string name="profile_ideals">Ideals</string>
    <string name="profile_bonds">Bonds</string>
    <string name="profile_flaws">Flaws</string>
    <string name="profile_background">Background</string>
    <string name="title_select_class">Select a class</string>
    <string name="select_class">Select class</string>
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>
    <string name="skills">Skills</string>
    <string name="modifier_strength">Str</string>
    <string name="modifier_dexterity">Dex</string>
    <string name="modifier_constitution">Con</string>
    <string name="modifier_intelligence">Int</string>
    <string name="modifier_wisdom">Wis</string>
    <string name="modifier_charisma">Cha</string>
    <string name="skill_display">%s (%s)</string>
    <string name="acrobatics">Acrobatics</string>
    <string name="animal_handling">Animal Handling</string>
    <string name="arcana">Arcana</string>
    <string name="athletics">Athletics</string>
    <string name="deception">Deception</string>
    <string name="history">History</string>
    <string name="insight">Insight</string>
    <string name="intimidation">Intimidation</string>
    <string name="investigation">Investigation</string>
    <string name="medicine">Medicine</string>
    <string name="nature">Nature</string>
    <string name="perception">Perception</string>
    <string name="performance">Performance</string>
    <string name="persuasion">Persuasion</string>
    <string name="religion">Religion</string>
    <string name="sleight_of_hand">Sleight of Hand</string>
    <string name="stealth">Stealth</string>
    <string name="survival">Survival</string>
    <string name="saving_throws">Saving Throws</string>
    <string name="proficiency_bonus">Proficiency Bonus</string>
    <string name="armor_class">Armor Class</string>
    <string name="initiative">Initiative</string>
    <string name="speed">Speed</string>
    <string name="hit_points">Hit Points</string>
    <string name="temporary_hit_points">Temp. HP</string>
    <string name="hit_dice">Hit Dice</string>
    <string name="hit_dice_nbr">Hit Dice Nbr</string>
    <string name="death_saves">Death Saves</string>
    <string name="successes">Successes</string>
    <string name="failures">Failures</string>
    <string name="short_rest">Short Rest</string>
    <string name="long_rest">Long Rest</string>
    <string name="label_other_health_bars">Other health bars</string>
    <string name="add_health_bar">Add health bar</string>
    <string name="hint_health_bar_name">Enter Name</string>
    <string name="notes">NOTES</string>
    <string name="quests">QUESTS</string>
    <string name="main_currencies">MAIN CURRENCIES</string>
    <string name="platinium_pieces">PP</string>
    <string name="gold_pieces">GP</string>
    <string name="elecrtrum_pieces">EP</string>
    <string name="silver_pieces">SP</string>
    <string name="copper_pieces">CP</string>
    <string name="other_currencies">OTHER CURRENCIES</string>
    <string name="equipment">EQUIPMENT</string>
    <string name="label_spellcasting_ability">Spellcasting Ability</string>
    <string name="text_spellcasting_ability">%s (%d)</string>
    <string name="label_spell_save_dc">Spell Save DC</string>
    <string name="label_spell_attack_bonus">Spell Attack Bonus</string>
    <string name="total_unlocked">Total unlocked</string>
    <string name="total_prepared">Total prepared</string>
    <string name="text_prepared">%d / %d</string>
    <string name="total_highlighted">Total highlighted</string>
    <string name="label_cantrips">Cantrips</string>
    <string name="cantrips_level">0</string>
    <string name="label_total_spell_slots">Total slots</string>
    <string name="label_spell_slots_left">Slots left</string>
    <string name="cast_spell">Cast spell</string>
    <string name="highlight_spell">Highlight spell</string>
    <string name="show_spell_details">Show spell details</string>
    <string name="label_level">Level :</string>
    <string name="level_cantrip">Cantrip</string>
    <string name="label_casting_time">Casting time :</string>
    <string name="label_range">Range :</string>
    <string name="label_components">Components :</string>
    <string name="vocal">Vocal</string>
    <string name="somatic">Somatic</string>
    <string name="materials">Materials</string>
    <string name="label_materials">Materials :</string>
    <string name="label_duration">Duration :</string>
    <string name="concentration_duration">Concentration, %s</string>
    <string name="ritual">This spell can be cast as a ritual but will take an additional 10 min.</string>
    <string name="label_description">Description :</string>
    <string name="label_higher_levels">At higher levels :</string>
    <string name="label_damage">Damage :</string>
    <string name="label_damage_type">Damage type :</string>
    <string name="label_damage_character_level">Character level</string>
    <string name="label_damage_spell_slot_level">Slot level</string>
    <string name="label_damage_row">Damage</string>
    <string name="label_classes">Classes :</string>
    <string name="spell_unlocked">Unlocked</string>
    <string name="spell_prepared">Prepared</string>
    <string name="spell_always_prepared">Always prepared</string>
    <string name="spell_highlighted">Highlighted</string>
    <string name="weapons">WEAPONS</string>
    <string name="label_melee_test">Melee attack test</string>
    <string name="label_ranged_test">Ranged attack test</string>
    <string name="add_weapon">Add Weapon</string>
    <string name="roll_attack">Roll for attack</string>
    <string name="label_weapon_count">Count</string>
    <string name="label_weapon_name">Name</string>
    <string name="label_weapon_test">Test</string>
    <string name="label_weapon_damage">Damage</string>
    <string name="label_weapon_range">Range</string>
    <string name="show_weapon_details">Show weapon details</string>
    <string name="label_count">Count :</string>
    <string name="label_weight">Weight :</string>
    <string name="label_cost">Cost :</string>
    <string name="label_properties">Properties :</string>
    <string name="label_attack_test">Attack test :</string>
    <string name="text_attack_test">%s (%d)</string>
    <string name="label_attack_normal">Normal</string>
    <string name="label_attack_two_handed">Two-handed</string>
    <string name="roll_damage">Roll for damage</string>
    <string name="label_type">Type :</string>
    <string name="label_hit_dice">Hit Dice :</string>
    <string name="label_equipment">Equipment :</string>
    <string name="label_proficiencies">Proficiencies</string>
    <string name="label_saving_throws">Saving Throws :</string>
    <string name="label_skills">Skills :</string>
    <string name="label_armor">Armor :</string>
    <string name="label_weapons">Weapons :</string>
    <string name="label_tools">Tools :</string>
    <string name="text_spellcaster">%ss are spellcasters.</string>
    <string name="label_class_spellcasting_ability">Spellcasting ability :</string>
    <string name="title_activity_test">TestActivity</string>
</resources>