<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/specs"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/inventory"
        android:title="@string/title_inventory" />

    <item
        android:id="@+id/navigation_spells"
        android:icon="@drawable/spell_book"
        android:title="@string/title_spells" />

    <item
        android:id="@+id/navigation_weapons"
        android:icon="@drawable/weapons"
        android:title="@string/title_weapons" />

    <item
        android:id="@+id/navigation_subclass"
        android:icon="@drawable/die"
        android:title="@string/title_subclass" />

</menu>