<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view"
        android:layout_width="57dp"
        android:layout_height="match_parent"
        android:layout_margin="1dp"/>

    <TextView
        android:id="@+id/labelWeaponName"
        style="@android:style/TextAppearance.Material.Small"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/label_weapon_name"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/labelTest"
        style="@android:style/TextAppearance.Material.Small"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/label_weapon_test"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/labelDamage"
        style="@android:style/TextAppearance.Material.Small"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/label_weapon_damage"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/labelRange"
        style="@android:style/TextAppearance.Material.Small"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/label_weapon_range"
        android:textSize="12sp" />
</LinearLayout>